--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <DOCTYPE html>
 <html>
 <head>
+  </head>
+  <body>
+    <base target="_blank" /> <iframe width="400" height="215" frameborder="0"
+                            scrolling="no" marginheight="0" marginwidth="0"
+          src="http://newsapp123.blogspot.com/"
+          style="color:#0000FF;text-ali
+  </body>
+  </html>
